...

                            provider.acceptTask(int.parse(widget.index));
                            context.pop();
                          }
                        },
                        child: const Text(
                          "Accept",
                          style: TextStyle(fontSize: 16, color: Colors.white),
                        ),
                      ),
                    ),

                    const SizedBox(height: 20),
...
